<resources>
    <string name="app_name">KoaNi</string>
    <string name="name">name</string>
    <string name="farm_assesment_form">Farm Assesment Form</string>
    <string name="enumerator">Enumerator</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="farm_location">Farm Location</string>
    <string name="farm_size_matured">Farm Size(Matured)</string>
    <string name="age_of_farm">Age Of Farm</string>
    <string name="crop_varieties">Crop Varieties</string>
    <string name="tetteh_quashi">Tetteh Quarshie</string>
    <string name="hybrid">Hybrid</string>
    <string name="yield_per_season">Yield Per Season</string>
    <string name="other_crops_oilpalm">Other Crops(e.g Oil Palm)</string>
    <string name="road_condition">Road Condition</string>
    <string name="save">Save</string>
    <string name="form_error">There were errors in the input provided</string>
    <string name="save_successful">Data saved successfully</string>
    <string name="type_of_fungicide_pesticide">Type of Fungicide/Pesticide</string>
    <string name="number_of_times_applied">Number of times applied</string>
    <string name="weeding_pollination">Weeding/Pollination</string>
    <string name="buying_company">Buying Company</string>
    <string name="date">Date</string>
    <string name="comments">comments</string>
    <string name="road_condition_comments">Road condition comments</string>
    <string name="ending_time_of_coordinate">Ending time of coordinate</string>


    <string-array name="road_conditions">
        <item>Bad</item>
        <item>Moderate</item>
        <item>Good</item>
    </string-array>

    <string-array name="number_of_times_applied">
        <item>Once/season</item>
        <item>Twice/Season</item>
        <item>More than Twice</item>
    </string-array>
</resources>